<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">


    <EditText
        android:id="@+id/sign_in_username"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/sign_in_page_username"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sign_in_email"
        style="@style/DefaultTextStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/sing_in_page_email"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_username"/>


    <EditText
        android:id="@+id/sign_in_password1"
        style="@style/DefaultTextStyle"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/login_page_password"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_email" />

    <EditText
        android:id="@+id/sign_in_password2"
        style="@style/DefaultTextStyle"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/sing_in_page_password2"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_password1" />


    <Button
        android:id="@+id/login_btn"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/darkgrey"
        android:text="@string/sign_in_page_btn_create"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>