<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    >


    <EditText
        android:id="@+id/login_username_email"
        style="@style/DefaultTextStyle"
        android:textColor="@color/lessdarkgrey"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/login_page_username_mail"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_password"
        style="@style/DefaultTextStyle"
        android:textColor="@color/lessdarkgrey"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_height="60dp"
        android:hint="@string/login_page_password"
        android:padding="@dimen/default_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_username_email" />


    <Button
        android:id="@+id/login_btn"
        style="@style/SubtitleTextStyle"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_margin="@dimen/default_margin"
        android:background="@color/darkgrey"
        android:text="@string/login_page_btn_connect"
        app:layout_constraintBottom_toBottomOf="parent" />

    <!-- connexion_start.xml -->
    <Button
        android:id="@+id/goto_registration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        app:layout_constraintBottom_toTopOf="@+id/login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>