<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="600dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lessdarkgrey">



    <androidx.cardview.widget.CardView

        android:id="@+id/cardView2"
        android:layout_width="220dp"
        android:layout_height="110dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="4dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ketlebell" />


    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/workout_details"
        style="@style/DefaultTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/popup_page_workout_Title"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_name_workout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_page_workout_name"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2"
        style="@style/SubtitleTextStyle" />

    <ImageView
        android:id="@+id/not_like_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/ic_unsaved"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_separation"
        app:layout_constraintTop_toBottomOf="@+id/popup_page_workout_description"
        app:tint="@color/white" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:rotation="180"
        android:src="@drawable/baseline_arrow_right_alt_24"
        app:layout_constraintBottom_toTopOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/workout_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/popup_page_workout_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popup_page_workout_description"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_name_workout"
        style="@style/DefaultTextStyle"/>

    <ImageView
        android:id="@+id/go_to_icon"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/baseline_outbound_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_separation"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_page_workout_description"
        app:tint="@color/white" />


    <View
        android:id="@+id/view_separation"
        android:layout_width="1dp"
        android:layout_height="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popup_page_workout_description" />




</androidx.constraintlayout.widget.ConstraintLayout>